@@ -49,5 +49,5 @@
       }
    },
    "release_status" : "stable",
-   "version" : "1.003"
+   "version" : "1.004"
 }
