@@ -31,4 +31,4 @@ requires:
   perl: 5.008
   strict: 0
   warnings: 0
-version: 1.003
+version: 1.004
