@@ -14,7 +14,7 @@ on how to use this module.
 
 DEPENDENCIES
 
-Perl version 5.6 or later is required to use this module.
+Perl version 5.8 or later is required to use this module.
 If you have perl version 5.10.0 or later, you shouldn't need any more prerequisites to use this module.
 Otherwise, you may need to install the following modules.
 
@@ -47,7 +47,7 @@ Where 1.VVV is the version number of the module you've got.
 
 If you're not familiar with the procedure of installing a perl module,
 you may want to read 
-"http://search.cpan.org/~jesse/perl-5.12.2/pod/perlmodinstall.pod".
+"http://search.cpan.org/~rjbs/perl-5.16.1/pod/perlmodinstall.pod"
 
 SEE ALSO
 
@@ -83,5 +83,6 @@ A copy of the GNU General Public License can be found in the
 source tree of this module under the name "GPL", or else see
 "http://www.gnu.org/licenses/".  A copy of the Artistic License can
 be found in the source tree under the name "ARTISTIC", or else see
-"http://cpansearch.perl.org/src/JESSE/perl-5.12.2/pod/perlartistic.pod".
+"http://search.cpan.org/~rjbs/perl-5.16.1/pod/perlartistic.pod".
+
 
