@@ -35,7 +35,7 @@ no strict "refs";
 	SKIP: {
 	$::crazy_ok and skip "punctuation package method call allowed", 2;
 	like($::crazy_err, qr/\ACan't call method "crazy" without a package or object reference /, "punctuation package method correct error message");
-	cmp_ok($], "<", 5.017005, "punctuation package allowed on new enough perl");
+	cmp_ok($], "<", 5.0170059, "punctuation package allowed on new enough perl");
 	}
 	SKIP: {
 	!$::crazy_ok and skip "punctuation package method call not allowed", 1;
